# knowledge-graphs

./: .gitignore  README.md  main.py  pyproject.toml
data/: generate_dataset.py
notebooks/: 01_solution_fraud_detection.ipynb  02_workshop_challenge.ipynb
